force-app/main/default/objects/Case/fields/Green_Case_Count__c.field-meta.xml
<CustomField>
    <fullName>Green_Case_Count__c</fullName>
    <description>Counts the amount of 'Complete' Case Group Member</description>
    <label>Green Case Count</label>
    <summaryFilterItems>
        <field>Case_Group_Member__c.Impact__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Case_Group_Member__c.Caseid__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>