force-app/main/default/objects/Case/fields/Ground_Customer_Service__c.field-meta.xml
<CustomField>
    <fullName>Ground_Customer_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ground Customer Service</label>
    <type>Checkbox</type>
</CustomField>