force-app/main/default/objects/Case/fields/Impact_CGM__c.field-meta.xml
<CustomField>
    <fullName>Impact_CGM__c</fullName>
    <description>Impact value for the primary CGM</description>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Malfunction</fullName>
            </value>
            <value>
                <fullName>Block</fullName>
            </value>
            <value>
                <fullName>Serviceable</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>