force-app/main/default/objects/Case/fields/Incident_Category_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Incident_Category_Mobile__c</fullName>
    <description>This is the value from field "inCate" from Mobile Incident Service. It is the indication of Incident Category consisted of "Passenger", "Service", "Maintenance", "Emergency" and "Other",</description>
    <label>Incident Category Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>