force-app/main/default/objects/Case/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cabin Log</fullName>
            </value>
            <value>
                <fullName>Flight Log</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>