force-app/main/default/objects/Case/fields/Indicator__c.field-meta.xml
<CustomField>
    <fullName>Indicator__c</fullName>
    <formula>IMAGE(
CASE( Status, 
"New", "/resource/icon_case/Status_New.png", 
"Escalated", "/resource/icon_case/Status_Escalate.png", 
"Waiting for Investigation", "/resource/icon_case/Status_Waiting_for_Investigation.png", 
"Waiting for Response", "/resource/icon_case/Status_Waiting_Customer_Response.png", 
"Investigated", "/resource/icon_case/Status_Investigated.png", 
"Customer Response", "/resource/icon_case/Status_Customer_Response.png", 
"Resolved", "/resource/icon_case/Status_Resolved.png", 
"Acknowledge", "/resource/icon_case/Status_Acknowledge.png", 
"Duplicate", "/resource/icon_case/Status_Duplicate.png",
"Closed", "/resource/icon_case/Status_Closed.png", 
"Re-Open", "/resource/icon_case/Status_Reopen.png",
"/resource/icon_case/Status_New.png"),"",24,24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicator</label>
    <type>Text</type>
</CustomField>