force-app/main/default/objects/Case/fields/Integration_Error__c.field-meta.xml
<CustomField>
    <fullName>Integration_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integration Error</label>
    <type>Checkbox</type>
</CustomField>