force-app/main/default/objects/Case/fields/Integration_Error_Reason__c.field-meta.xml
<CustomField>
    <fullName>Integration_Error_Reason__c</fullName>
    <label>Integration Error Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>