force-app/main/default/objects/Case/fields/Investigated_by__c.field-meta.xml
<CustomField>
    <fullName>Investigated_by__c</fullName>
    <label>Investigated by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>