force-app/main/default/objects/Case/fields/Investigated_Time__c.field-meta.xml
<CustomField>
    <fullName>Investigated_Time__c</fullName>
    <label>Investigated Time</label>
    <type>DateTime</type>
</CustomField>