force-app/main/default/objects/Case/fields/Investigated_to_Closed__c.field-meta.xml
<CustomField>
    <fullName>Investigated_to_Closed__c</fullName>
    <label>Investigated to Closed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>