force-app/main/default/objects/Case/fields/Investigation_Comment__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Comment__c</fullName>
    <label>Investigation Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>