force-app/main/default/objects/Case/fields/Investigation_Type__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Type__c</fullName>
    <label>Investigation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accident/Injuries</fullName>
            </value>
            <value>
                <fullName>Baggage Handling</fullName>
            </value>
            <value>
                <fullName>Defect/Malfunction</fullName>
            </value>
            <value>
                <fullName>Denied Onboard</fullName>
            </value>
            <value>
                <fullName>Excess Baggage</fullName>
            </value>
            <value>
                <fullName>Irregularities Handling</fullName>
            </value>
            <value>
                <fullName>Meal Onboard</fullName>
            </value>
            <value>
                <fullName>Performance of staff</fullName>
            </value>
            <value>
                <fullName>Punctuality of flights</fullName>
            </value>
            <value>
                <fullName>Reservation/Ticketing</fullName>
            </value>
            <value>
                <fullName>Disruptive/Unruly Passenger</fullName>
            </value>
            <value>
                <fullName>Upgrading/Downgrading</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>