force-app/main/default/objects/Case/fields/Irregularity_Handling__c.field-meta.xml
<CustomField>
    <fullName>Irregularity_Handling__c</fullName>
    <label>Irregularity Handling</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>