force-app/main/default/objects/Case/fields/Is_Upgrade_Seat_Case__c.field-meta.xml
<CustomField>
    <fullName>Is_Upgrade_Seat_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays whether this case concerns seat upgrading</description>
    <label>Is Upgrade Seat Case</label>
    <type>Checkbox</type>
</CustomField>