force-app/main/default/objects/Case/fields/IsFirst_Platinum__c.field-meta.xml
<CustomField>
    <fullName>IsFirst_Platinum__c</fullName>
    <description>Displays whether the passenger related to the case is a first class passenger or a platinum tier passenger</description>
    <formula>IF( Accepted_Class__c == "F" || ROP_Tier__c == "PLAT" , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsFirst_Platinum</label>
    <type>Checkbox</type>
</CustomField>