force-app/main/default/objects/Case/fields/Isowner__c.field-meta.xml
<CustomField>
    <fullName>Isowner__c</fullName>
    <description>Displays whether the current user is the case owner</description>
    <formula>IF(Owner:User.Id ==  $User.Id , "true", "false")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Isowner</label>
    <type>Text</type>
</CustomField>