force-app/main/default/objects/Case/fields/Json_Body__c.field-meta.xml
<CustomField>
    <fullName>Json_Body__c</fullName>
    <description>Source</description>
    <label>Json Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>