force-app/main/default/objects/Case/fields/Lack_of_Part__c.field-meta.xml
<CustomField>
    <fullName>Lack_of_Part__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays if the reason the maintenance case is still open is because of lacking parts</description>
    <label>Lack of Part</label>
    <type>Checkbox</type>
</CustomField>