force-app/main/default/objects/Case/fields/Lack_of_Time__c.field-meta.xml
<CustomField>
    <fullName>Lack_of_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays if the reason the maintenance case is still open is because of lacking time</description>
    <label>Lack of Time</label>
    <type>Checkbox</type>
</CustomField>