force-app/main/default/objects/Case/fields/Last_Name_txt__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_txt__c</fullName>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>