force-app/main/default/objects/Case/fields/Latest_Document__c.field-meta.xml
<CustomField>
    <fullName>Latest_Document__c</fullName>
    <label>Latest Document</label>
    <length>20</length>
    <type>Text</type>
</CustomField>