force-app/main/default/objects/Case/fields/Latest_Template__c.field-meta.xml
<CustomField>
    <fullName>Latest_Template__c</fullName>
    <label>Latest Template</label>
    <length>18</length>
    <type>Text</type>
</CustomField>