force-app/main/default/objects/Case/fields/LCD_Detail__c.field-meta.xml
<CustomField>
    <fullName>LCD_Detail__c</fullName>
    <label>LCD Detail</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>