force-app/main/default/objects/Case/fields/Letter_Body__c.field-meta.xml
<CustomField>
    <fullName>Letter_Body__c</fullName>
    <label>Letter Body</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>