force-app/main/default/objects/Case/fields/Letter_Bodyid__c.field-meta.xml
<CustomField>
    <fullName>Letter_Bodyid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Letter Body</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Letter_Master__c.Letter_Language__c</field>
            <operation>equals</operation>
            <valueField>$Source.Letter_Language__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Letter_Master__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>