force-app/main/default/objects/Case/fields/Letter_Language__c.field-meta.xml
<CustomField>
    <fullName>Letter_Language__c</fullName>
    <label>Letter Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TH</fullName>
            </value>
            <value>
                <fullName>EN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>