force-app/main/default/objects/Case/fields/LetterTH1_Attachment_Amount__c.field-meta.xml
<CustomField>
    <fullName>LetterTH1_Attachment_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>LetterTH1 Attachment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>