force-app/main/default/objects/Case/fields/LetterTH2_Attachment_Amount__c.field-meta.xml
<CustomField>
    <fullName>LetterTH2_Attachment_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>LetterTH2 Attachment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>