force-app/main/default/objects/Case/fields/Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Log_Type__c</fullName>
    <formula>IF( MID( SEQ_No_Display__c , 6, 1) = "C", "Cabin Log", "Flight Log")</formula>
    <label>Log Type</label>
    <type>Text</type>
</CustomField>