force-app/main/default/objects/Case/fields/Lounge_Location__c.field-meta.xml
<CustomField>
    <fullName>Lounge_Location__c</fullName>
    <label>Lounge Location</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ROYAL SILK LOUNGE (A2-1) Domestic</fullName>
            </value>
            <value>
                <fullName>ROYAL SILK LOUNGE (C3-1)</fullName>
            </value>
            <value>
                <fullName>ROYAL SILK LOUNGE (C3-2)</fullName>
            </value>
            <value>
                <fullName>ROYAL SILK LOUNGE (D3-1)</fullName>
            </value>
            <value>
                <fullName>ROYAL FIRST LOUNGE (D3-F)</fullName>
            </value>
            <value>
                <fullName>ROYAL SILK LOUNGE (E3-1)</fullName>
            </value>
            <value>
                <fullName>ROYAL ORCHID LOUNGE (E3-2)</fullName>
            </value>
            <value>
                <fullName>ROYAL ORCHID LOUNGE (E3-F) FIRST CLASS</fullName>
            </value>
            <value>
                <fullName>ROYAL ORCHID LOUNGE (E3-F)   FIRST CLASS</fullName>
            </value>
            <value>
                <fullName>ROYAL SILK LOUNGE (A2-1)   Domestic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>