force-app/main/default/objects/Case/fields/Mobile_App_Key__c.field-meta.xml
<CustomField>
    <fullName>Mobile_App_Key__c</fullName>
    <externalId>true</externalId>
    <label>Mobile App Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>