force-app/main/default/objects/Case/fields/My_Station__c.field-meta.xml
<CustomField>
    <fullName>My_Station__c</fullName>
    <formula>OR(
$User.Station__c =  Owner:User.Station__c,
AND(NOT(ISBLANK(Owner:Queue.QueueName)),CONTAINS($UserRole.Name, Owner:Queue.QueueName))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Station</label>
    <type>Checkbox</type>
</CustomField>