force-app/main/default/objects/Case/fields/Nationality_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Nationality_Full_Name__c</fullName>
    <formula>IF(ISBLANK(Passengerid__r.Nationality_Fullname__c),"Unidentified",Passengerid__r.Nationality_Fullname__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nationality Full Name</label>
    <type>Text</type>
</CustomField>