force-app/main/default/objects/Case/fields/Not_Send_Acknowledge_Email__c.field-meta.xml
<CustomField>
    <fullName>Not_Send_Acknowledge_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked for disable auto sent acknowledge email.</description>
    <label>Not Send Acknowledge Email</label>
    <type>Checkbox</type>
</CustomField>