force-app/main/default/objects/Case/fields/Number_Of_Serviceables__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Serviceables__c</fullName>
    <description>Displays the number of cases where impact is serviceable</description>
    <label>Number Of Serviceables</label>
    <summaryFilterItems>
        <field>Case_Group_Member__c.Impact_F__c</field>
        <operation>equals</operation>
        <value>Serviceable</value>
    </summaryFilterItems>
    <summaryForeignKey>Case_Group_Member__c.Caseid__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>