force-app/main/default/objects/Case/fields/Orange_Case_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Orange_Case_Record_Count__c</fullName>
    <description>Displays the number of cases where impact is malfunction</description>
    <label>Orange Case Record Count</label>
    <summaryFilterItems>
        <field>Case_Group_Member__c.Impact__c</field>
        <operation>equals</operation>
        <value>Malfunction</value>
    </summaryFilterItems>
    <summaryForeignKey>Case_Group_Member__c.Caseid__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>