force-app/main/default/objects/Case/fields/Other_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Other_Flight_Number__c</fullName>
    <description>Displays the other flight number (in the case that flight is not in our system)</description>
    <label>Other Flight Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>