force-app/main/default/objects/Case/fields/Other_RP__c.field-meta.xml
<CustomField>
    <fullName>Other_RP__c</fullName>
    <formula>IF(Text(Status) != "Waiting for Response" &amp;&amp; Text(Status) != "Closed",1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>