force-app/main/default/objects/Case/fields/Over_Booked_Amount__c.field-meta.xml
<CustomField>
    <fullName>Over_Booked_Amount__c</fullName>
    <description>Displays the amount of overbooked passenger in the  case</description>
    <formula>IF( Previous_Flight__c &lt;> "", 
Previous_Flight__r.Over_Booked_Amount_txt__c, 
Flightid__r.Over_Booked_Amount_txt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Over Booked Amount</label>
    <type>Text</type>
</CustomField>