force-app/main/default/objects/Case/fields/Owner_Role_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role_Name_2__c</fullName>
    <description>Displays the case owner's role</description>
    <formula>Owner:User.UserRole.Name</formula>
    <label>Owner Role Name</label>
    <type>Text</type>
</CustomField>