force-app/main/default/objects/Case/fields/Owner_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role_Name__c</fullName>
    <description>Displays the case owner's department</description>
    <formula>Owner:User.Department</formula>
    <label>Owner Department Name</label>
    <type>Text</type>
</CustomField>