force-app/main/default/objects/Case/fields/Owner_Station__c.field-meta.xml
<CustomField>
    <fullName>Owner_Station__c</fullName>
    <description>Displays the case owner's station</description>
    <formula>$User.Station__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Station</label>
    <type>Text</type>
</CustomField>