force-app/main/default/objects/Case/fields/PartId__c.field-meta.xml
<CustomField>
    <fullName>PartId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays the part of the equipment that is related to the case</description>
    <label>Part</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Map__c.Depend_On_Object__c</field>
            <operation>equals</operation>
            <valueField>$Source.EquipmentId__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Map__c</referenceTo>
    <relationshipLabel>Cases (Part)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>