force-app/main/default/objects/Case/fields/Passenger_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Country_Code__c</fullName>
    <label>Passenger Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>