force-app/main/default/objects/Case/fields/Passenger_Email__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Email__c</fullName>
    <label>Passenger Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>