force-app/main/default/objects/Case/fields/Passenger_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Mobile__c</fullName>
    <label>Passenger Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>