force-app/main/default/objects/Case/fields/Passenger_Name_Local_Name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Name_Local_Name__c</fullName>
    <formula>IF( ISBLANK(Local_Name__c),  Passengerid__r.Name ,Local_Name__c)</formula>
    <label>Passenger Name/Local Name</label>
    <type>Text</type>
</CustomField>