force-app/main/default/objects/Case/fields/Passenger_Phone__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Phone__c</fullName>
    <label>Passenger Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>