force-app/main/default/objects/Case/fields/Passenger_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Ticket_Number__c</fullName>
    <label>Passenger Ticket Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>