force-app/main/default/objects/Case/fields/Passengerid__c.field-meta.xml
<CustomField>
    <fullName>Passengerid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passenger Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Flightid__c</field>
            <operation>equals</operation>
            <valueField>Passenger__c.FlightId__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Passenger__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>