force-app/main/default/objects/Case/fields/PassengerList__c.field-meta.xml
<CustomField>
    <fullName>PassengerList__c</fullName>
    <label>Passenger List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>