force-app/main/default/objects/Case/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Displayed authorized person's position which support for both of BKK and non-BKK. This field is used to be a pert of autorized signatue in email and print feature.</description>
    <formula>IF(	Owner:User.Station__c != 'BKK' &amp;&amp; 
	Owner:User.Station__c != 'CNX' &amp;&amp; 
	Owner:User.Station__c != 'HKT' &amp;&amp; 
	Owner:User.Station__c != 'KBV' &amp;&amp;
	Owner:User.Station__c != 'USM',
        Position_txt__c,
IF(
Text(Authorize_Signature__c) != null,
IF(
Text(Letter_Language__c) == "TH",
Position_TH_txt__c ,
Position_EN_txt__c
),
null)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position</label>
    <type>Text</type>
</CustomField>