force-app/main/default/objects/Case/fields/Position_Case_Group_Member__c.field-meta.xml
<CustomField>
    <fullName>Position_Case_Group_Member__c</fullName>
    <description>Displays the position of all the case group members</description>
    <label>Position</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>