force-app/main/default/objects/Case/fields/Position_No__c.field-meta.xml
<CustomField>
    <fullName>Position_No__c</fullName>
    <description>Used in Maintenance Case Creation. Value input here will be used as a primary Case Group Member</description>
    <label>Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>