force-app/main/default/objects/Case/fields/Position_TH__c.field-meta.xml
<CustomField>
    <fullName>Position_TH__c</fullName>
    <description>This field is an autorized person's position in Thai for non-BKK station. Used to be a part of authorized signature.</description>
    <formula>IF(	Owner:User.Station__c != 'BKK' &amp;&amp; 
Owner:User.Station__c != 'CNX' &amp;&amp; 
Owner:User.Station__c != 'HKT' &amp;&amp; 
Owner:User.Station__c != 'KBV' &amp;&amp; 
Owner:User.Station__c != 'USM', 
Position_txt__c, 
IF( Text(Authorize_Signature__c) != null, Position_TH_txt__c, Owner:User.Authorized_Position_TH__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position TH</label>
    <type>Text</type>
</CustomField>