force-app/main/default/objects/Case/fields/Position_TH_txt__c.field-meta.xml
<CustomField>
    <fullName>Position_TH_txt__c</fullName>
    <label>Position TH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>