force-app/main/default/objects/Case/fields/Position_txt__c.field-meta.xml
<CustomField>
    <fullName>Position_txt__c</fullName>
    <description>This field is an autorized person's position for non-BKK station. Used to be a part of authorized signature.</description>
    <label>Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>