force-app/main/default/objects/Case/fields/Previous_Flight__c.field-meta.xml
<CustomField>
    <fullName>Previous_Flight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays the previous flight that is related to the case</description>
    <label>Previous Flight</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>Cases (Previous Flight)</relationshipLabel>
    <relationshipName>Previous_Flight</relationshipName>
    <type>Lookup</type>
</CustomField>