force-app/main/default/objects/Case/fields/Previous_Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Flight_Date__c</fullName>
    <description>Used to input previous flight date to search for an existing previous flight</description>
    <label>Previous Flight Date</label>
    <type>Date</type>
</CustomField>