force-app/main/default/objects/Case/fields/Previous_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Flight_Number__c</fullName>
    <description>Used to input three digits to indicate the flight number of the previous flight</description>
    <label>Previous Flight Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>