force-app/main/default/objects/Case/fields/Previous_Flight_txt__c.field-meta.xml
<CustomField>
    <fullName>Previous_Flight_txt__c</fullName>
    <label>Previous Flight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>