force-app/main/default/objects/Case/fields/rate__c.field-meta.xml
<CustomField>
    <fullName>rate__c</fullName>
    <formula>IF( YEAR(DATEVALUE(CreatedDate)) == 2017,
CASE(CEILING(MONTH(DATEVALUE(CreatedDate))/3),1,88,2,88,3,88,88)
,CASE(CEILING(MONTH(DATEVALUE(CreatedDate))/3),1,91,2,91,3,91,91)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>