force-app/main/default/objects/Case/fields/Red_Case_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Red_Case_Record_Count__c</fullName>
    <description>Displays the number of cases with actions being blocked</description>
    <label>Red Case Record Count</label>
    <summaryFilterItems>
        <field>Case_Group_Member__c.Impact__c</field>
        <operation>equals</operation>
        <value>Block</value>
    </summaryFilterItems>
    <summaryForeignKey>Case_Group_Member__c.Caseid__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>