force-app/main/default/objects/Case/fields/Report_Lack_of_Time__c.field-meta.xml
<CustomField>
    <fullName>Report_Lack_of_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in storing the last value from lack of time before being cleared by changing action to complete</description>
    <label>Report Lack of Time</label>
    <type>Checkbox</type>
</CustomField>