force-app/main/default/objects/Case/fields/Reported_By_Crew__c.field-meta.xml
<CustomField>
    <fullName>Reported_By_Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reported By Crew</label>
    <referenceTo>Crew__c</referenceTo>
    <relationshipLabel>Cases (Reported By Crew)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>